2017-10-05  Bruno Haible  <bruno@clisp.org>

	Modernize: Assume that getpagesize() exists on all Unix platforms.
	* spvw_mmap.d (mmap_init_pagesize): Don't use SHMLBA nor Solaris 2.4
	fallbacks.
	* unix.d: Don't include <sys/ipc.h>, <sys/shm.h>, <sys/sysmacros.h>,
	<sys/vmmac.h>.
	* configure.in: Don't invoke CL_SHM_H, CL_SHM.
	* m4/shm.m4: Remove file.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Ensure compatibility of .mem file between NetBSD/sparc architectures.
	* spvw_mmap.d (mmap_init_pagesize): Choose 8192 on any SPARC platform.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Modernize: Assume that getrusage() is properly declared.
	* unix.d (getrusage): Remove declaration.
	* m4/rusage.m4 (CL_RUSAGE): Don't define RUSAGE_WHO_T.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.
	* modules/*/configure, modules/*/config.h.in: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Remove unused code in Autoconf macros.
	* configure.in: Don't invoke CL_RLIMIT. Instead, check for getrlimit.
	* modules/syscalls/configure.in: Don't invoke CL_RLIMIT. Instead, check
	for getrlimit, setrlimit, and determine sizeof(rlim_t).
	* src/m4/rlimit.m4: Remove file.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.
	* modules/*/configure, modules/*/config.h.in: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Remove unused autoconf test.
	* configure.in: Don't invoke CL_MSYNC.
	* m4/msync.m4: Remove file.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Drop support for old Mac OS Rhapsody.
	* lispbibl.d (UNIX_RHAPSODY, UNIX_DARWIN): Remove macros.
	Test UNIX_MACOSX instead of UNIX_DARWIN everywhere.
	* unix.d: Remove special code for UNIX_RHAPSODY.
	* spvw.d, stream.d, socket.d: Test UNIX_MACOSX instead of UNIX_DARWIN.

2017-10-05  Bruno Haible  <bruno@clisp.org>
