@@ -31,7 +31,6 @@ AC_DEFUN([CL_TERM],
     dnl Linux libc6 defines struct winsize in <termio.h>, <sys/ioctl.h>.
     dnl Since we don't want to include both <termios.h> and <termio.h> (they may
     dnl conflict), prefer <sys/ioctl.h> to <termio.h>.
-    dnl SCO defines struct winsize in <sys/ptem.h>, which itself needs <sys/stream.h>.
     CL_COMPILE_CHECK([struct winsize in termios.h], [cl_cv_struct_winsize],
       [#include <termios.h>],
       [struct winsize w;],
@@ -44,16 +43,6 @@ AC_DEFUN([CL_TERM],
         [AC_DEFINE([WINSIZE_NEED_SYS_IOCTL_H],,
            [have <termios.h> but need <sys/ioctl.h> for `struct winsize'])
         ])
-      if test $cl_cv_struct_winsize_ioctl = no; then
-        CL_COMPILE_CHECK([struct winsize in sys/ptem.h], [cl_cv_struct_winsize_ptem],
-          [#include <sys/types.h>
-           #include <sys/stream.h>
-           #include <sys/ptem.h>],
-          [struct winsize w;],
-          [AC_DEFINE([WINSIZE_NEED_SYS_PTEM_H],,
-             [have <termios.h> but need <sys/ptem.h> for `struct winsize'])
-          ])
-      fi
     fi
   fi
 ])
